0.04 Sun Thu Feb 07 07:09:37 EST 2008 
-------------------------------------
	- ported to Module::Build
	- ported tests to Test::More
	- one can now access computes values with $o->value() 

0.03 Fri Dec 14 03:52:33 EST 2001 
-------------------------------------
	- added verbose()

0.02  Wed Dec 12 13:29:46 EST 2001
--------------------------------------
	- killed "use warnings" generated by h2xs to placate < 5.6 perls

0.01  Wed Dec 12 02:20:45 EST 2001 
--------------------------------------
	- First release
